--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "express": "^4.18.2",
-    "hardhat": "^2.12.2"
+    "hardhat": "^2.12.2",
+    "mongodb": "^4.6.0",
+    "mongoose": "^6.7.2"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0"
